manifests/web-cluster/sdlc/helium/ecc-verifier.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ecc-verifier
  name: ecc-verifier
  namespace: helium
spec:
  selector:
    matchLabels:
      app: ecc-verifier
  template:
    metadata:
      labels:
        app: ecc-verifier
    spec:
      containers:
        - name: ecc-verifier
          image: public.ecr.aws/v0j6k5v6/ecc-verifier:0.1.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              name: http
              protocol: TCP
          volumeMounts:
            - name: ecc-verifier-keypair
              mountPath: /app/keys
              readOnly: true
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 8000
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 8000
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              cpu: 300m
              memory: 300Mi
      volumes:
        - name: ecc-verifier-keypair
          secret:
            secretName: ecc-verifier-keypair
            items:
              - key: keypair.json
                path: keypair.json
---
apiVersion: v1
kind: Service
metadata:
  name: ecc-verifier
  namespace: helium
spec:
  ports:
    - port: 8000
      protocol: TCP
      targetPort: http
  selector:
    app: ecc-verifier
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecc-verifier
  namespace: helium
  annotations:
    nginx.ingress.kubernetes.io/limit-rps: "1"
    nginx.ingress.kubernetes.io/limit-burst-multiplier: "3"
spec:
  ingressClassName: nginx
  rules:
  - host: ecc-verifier.web.test-helium.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ecc-verifier
            port:
              number: 8000
